[gd_scene load_steps=34 format=2]

[ext_resource path="res://script/oyuncu/oyuncupara.gd" type="Script" id=1]
[ext_resource path="res://font/hemi-head-426.rg-bolditalic.ttf" type="FontFile" id=2]
[ext_resource path="res://script/menu/Scroll.gd" type="Script" id=3]
[ext_resource path="res://tscndosyalari/menu/LevelBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://font/new_dynamicfont.tres" type="FontFile" id=5]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=6]

[sub_resource type="FontFile" id=38]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0, 0, 0, 0.752941 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 1, 0, 0, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=11]
HScrollBar/styles/scroll = SubResource( 29 )
ScrollContainer/styles/bg = SubResource( 30 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = SubResource( 31 )
VScrollBar/styles/grabber_highlight = SubResource( 31 )
VScrollBar/styles/grabber_pressed = SubResource( 31 )
VScrollBar/styles/scroll = SubResource( 31 )
VScrollBar/styles/scroll_focus = SubResource( 31 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.831373, 1, 0, 0.627451 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 3

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.133333, 0.666667, 0.145098, 1 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0, 0, 0.705882 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="FontFile" id=27]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.0509804, 0.215686, 0.317647, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.0666667, 0.380392, 0.568627, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 0.423529 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 3

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.0196078, 0.133333, 0.203922, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 0.423529 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 3

[sub_resource type="FontFile" id=7]
size = 20
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="FontFile" id=8]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.582031, 0.383289, 0, 0.196078 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.501961, 0.294118, 0.0705882, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="FontFile" id=9]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.588235, 0.588235, 0.588235, 0.196078 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.603922, 0.603922, 0.603922, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="FontFile" id=10]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.780737, 0.831055, 0, 0.196078 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.784314, 0.85098, 0.0823529, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="FontFile" id=13]
size = 20
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 1, 0.905882, 0.196078 )
skew = Vector2( 0, 0.2 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 1, 0.890196, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="FontFile" id=34]
size = 23
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="ParaTablo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -720.0
script = ExtResource( 1 )

[node name="arkaplan" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_top = 656.0
offset_right = 640.0
offset_bottom = 726.0
color = Color( 0.0509804, 0.027451, 0.027451, 1 )

[node name="isim" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 656.0
offset_right = 416.0
offset_bottom = 726.0
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = SubResource( 38 )
theme_override_styles/hover = SubResource( 21 )
theme_override_styles/pressed = SubResource( 21 )
theme_override_styles/focus = SubResource( 21 )
theme_override_styles/disabled = SubResource( 21 )
theme_override_styles/normal = SubResource( 21 )
toggle_mode = true
text = "Kullanıcı Adı"

[node name="Gorev" type="Label" parent="isim"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -712.0
offset_top = -691.0
offset_right = -212.0
offset_bottom = -35.0
theme_override_styles/normal = SubResource( 26 )

[node name="v" type="VBoxContainer" parent="isim/Gorev"]
offset_right = 40.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 500, 656 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Baslik" type="Label" parent="isim/Gorev/v"]
offset_right = 500.0
offset_bottom = 125.0
custom_minimum_size = Vector2( 0, 125 )
size_flags_vertical = 5
theme_override_fonts/font = ExtResource( 5 )
align = 1
valign = 1

[node name="s" type="ScrollContainer" parent="isim/Gorev/v"]
offset_top = 129.0
offset_right = 500.0
offset_bottom = 656.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 11 )
script = ExtResource( 3 )

[node name="v" type="VBoxContainer" parent="isim/Gorev/v/s"]
offset_right = 500.0
offset_bottom = 766.0
custom_minimum_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Gorev1" type="Label" parent="isim/Gorev/v/s/v"]
offset_right = 500.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 0, 150 )
size_flags_vertical = 1
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/normal = SubResource( 35 )
text = "Herhangi bir pistteki en iyi süreni geç."
align = 1
autowrap = true

[node name="bar" type="ProgressBar" parent="isim/Gorev/v/s/v/Gorev1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -226.0
offset_top = -60.0
offset_right = 224.0
offset_bottom = -19.0
custom_minimum_size = Vector2( 450, 30 )
mouse_filter = 2
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/fg = SubResource( 24 )
theme_override_styles/bg = SubResource( 25 )
step = 1.0
value = 5.0

[node name="b1" type="Button" parent="isim/Gorev/v/s/v/Gorev1"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -68.0
offset_right = 50.0
offset_bottom = -18.0
custom_minimum_size = Vector2( 100, 50 )
theme_override_fonts/font = SubResource( 27 )
theme_override_styles/hover = SubResource( 28 )
theme_override_styles/pressed = SubResource( 28 )
theme_override_styles/normal = SubResource( 36 )
text = "Al"

[node name="Gorev2" type="Label" parent="isim/Gorev/v/s/v"]
offset_top = 154.0
offset_right = 500.0
offset_bottom = 304.0
custom_minimum_size = Vector2( 0, 150 )
size_flags_vertical = 1
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/normal = SubResource( 32 )
text = "10 tur at."
align = 1
autowrap = true

[node name="bar" type="ProgressBar" parent="isim/Gorev/v/s/v/Gorev2"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -226.0
offset_top = -60.0
offset_right = 224.0
offset_bottom = -19.0
custom_minimum_size = Vector2( 450, 30 )
mouse_filter = 2
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/fg = SubResource( 24 )
theme_override_styles/bg = SubResource( 25 )
step = 1.0
value = 5.0

[node name="b2" type="Button" parent="isim/Gorev/v/s/v/Gorev2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -68.0
offset_right = 50.0
offset_bottom = -18.0
custom_minimum_size = Vector2( 100, 50 )
theme_override_fonts/font = SubResource( 27 )
theme_override_styles/hover = SubResource( 28 )
theme_override_styles/pressed = SubResource( 37 )
theme_override_styles/normal = SubResource( 36 )
text = "Al"

[node name="Gorev3" type="Label" parent="isim/Gorev/v/s/v"]
offset_top = 308.0
offset_right = 500.0
offset_bottom = 458.0
custom_minimum_size = Vector2( 0, 150 )
size_flags_vertical = 5
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/normal = SubResource( 33 )
text = "Bota karşı iki yarış kazan."
align = 1
autowrap = true

[node name="bar" type="ProgressBar" parent="isim/Gorev/v/s/v/Gorev3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -226.0
offset_top = -60.0
offset_right = 224.0
offset_bottom = -19.0
custom_minimum_size = Vector2( 450, 30 )
mouse_filter = 2
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/fg = SubResource( 24 )
theme_override_styles/bg = SubResource( 25 )
step = 1.0
value = 5.0

[node name="b3" type="Button" parent="isim/Gorev/v/s/v/Gorev3"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -68.0
offset_right = 50.0
offset_bottom = -18.0
custom_minimum_size = Vector2( 100, 50 )
theme_override_fonts/font = SubResource( 27 )
theme_override_styles/hover = SubResource( 28 )
theme_override_styles/pressed = SubResource( 28 )
theme_override_styles/normal = SubResource( 36 )
text = "Al"

[node name="Gorev4" type="Label" parent="isim/Gorev/v/s/v"]
offset_top = 462.0
offset_right = 500.0
offset_bottom = 612.0
custom_minimum_size = Vector2( 0, 150 )
size_flags_vertical = 5
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/normal = SubResource( 33 )
text = "Reklam izle."
align = 1
autowrap = true

[node name="r4" type="Button" parent="isim/Gorev/v/s/v/Gorev4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -188.0
offset_top = -62.0
offset_right = 196.0
offset_bottom = -15.0
custom_minimum_size = Vector2( 150, 30 )
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/hover = SubResource( 37 )
theme_override_styles/pressed = SubResource( 37 )
theme_override_styles/normal = SubResource( 36 )

[node name="Gorev5" type="Label" parent="isim/Gorev/v/s/v"]
offset_top = 616.0
offset_right = 500.0
offset_bottom = 766.0
custom_minimum_size = Vector2( 0, 150 )
size_flags_vertical = 5
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/normal = SubResource( 33 )
text = "Reklam izle."
align = 1
autowrap = true

[node name="r5" type="Button" parent="isim/Gorev/v/s/v/Gorev5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -188.0
offset_top = -64.0
offset_right = 196.0
offset_bottom = -17.0
custom_minimum_size = Vector2( 150, 30 )
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/hover = SubResource( 37 )
theme_override_styles/pressed = SubResource( 37 )
theme_override_styles/normal = SubResource( 36 )

[node name="Level" parent="isim" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -192.0
offset_top = 6.0
offset_right = 8.0
offset_bottom = 206.0
scale = Vector2( 0.25, 0.25 )

[node name="paralar" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 288.0
offset_top = 656.0
offset_right = 630.0
offset_bottom = 716.0

[node name="para" type="Control" parent="paralar"]
offset_right = 110.0
offset_bottom = 60.0
custom_minimum_size = Vector2( 110, 60 )
size_flags_horizontal = 3

[node name="para" type="Label" parent="paralar/para"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -17.5
offset_right = 50.0
offset_bottom = 17.5
custom_minimum_size = Vector2( 100, 0 )
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 7 )
theme_override_styles/normal = SubResource( 20 )
text = "para"
align = 1
valign = 1

[node name="b" type="Control" parent="paralar"]
offset_left = 114.0
offset_right = 168.0
offset_bottom = 60.0
custom_minimum_size = Vector2( 45, 50 )
size_flags_horizontal = 3

[node name="b" type="Label" parent="paralar/b"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -17.5
offset_right = 22.5
offset_bottom = 17.5
custom_minimum_size = Vector2( 45, 0 )
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 0.729412, 0.372549, 0.0588235, 1 )
theme_override_fonts/font = SubResource( 8 )
theme_override_styles/normal = SubResource( 16 )
text = "b"
align = 1
valign = 1

[node name="g" type="Control" parent="paralar"]
offset_left = 172.0
offset_right = 226.0
offset_bottom = 60.0
custom_minimum_size = Vector2( 45, 50 )
pivot_offset = Vector2( -456, 64 )
size_flags_horizontal = 3

[node name="g" type="Label" parent="paralar/g"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -17.5
offset_right = 22.5
offset_bottom = 17.5
custom_minimum_size = Vector2( 45, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 9 )
theme_override_styles/normal = SubResource( 17 )
text = "g"
align = 1
valign = 1

[node name="a" type="Control" parent="paralar"]
offset_left = 230.0
offset_right = 284.0
offset_bottom = 60.0
custom_minimum_size = Vector2( 45, 50 )
size_flags_horizontal = 3

[node name="a" type="Label" parent="paralar/a"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -17.5
offset_right = 22.5
offset_bottom = 17.5
custom_minimum_size = Vector2( 45, 0 )
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 0.984314, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 10 )
theme_override_styles/normal = SubResource( 18 )
text = "a"
align = 1
valign = 1

[node name="e" type="Control" parent="paralar"]
offset_left = 288.0
offset_right = 342.0
offset_bottom = 60.0
custom_minimum_size = Vector2( 45, 30 )
size_flags_horizontal = 3

[node name="e" type="Label" parent="paralar/e"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -17.5
offset_right = 22.5
offset_bottom = 17.5
custom_minimum_size = Vector2( 45, 0 )
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 0, 1, 0.980392, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = SubResource( 13 )
theme_override_styles/normal = SubResource( 19 )
text = "e"
align = 1
valign = 1

[node name="muzik" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -352.0
offset_top = 756.0
offset_bottom = 820.0
theme_override_fonts/font = SubResource( 34 )
valign = 1
clip_text = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]
repeat = true
playback/repeat = true

[connection signal="toggled" from="isim" to="." method="_on_isim_toggled"]
[connection signal="pressed" from="isim/Gorev/v/s/v/Gorev1/b1" to="." method="_on_b1_pressed"]
[connection signal="pressed" from="isim/Gorev/v/s/v/Gorev2/b2" to="." method="_on_b2_pressed"]
[connection signal="pressed" from="isim/Gorev/v/s/v/Gorev3/b3" to="." method="_on_b3_pressed"]
[connection signal="pressed" from="isim/Gorev/v/s/v/Gorev4/r4" to="." method="_on_r4_pressed"]
[connection signal="pressed" from="isim/Gorev/v/s/v/Gorev5/r5" to="." method="_on_r5_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="rewarded" from="AdMob" to="." method="_on_AdMob_rewarded"]
[connection signal="rewarded_video_failed_to_load" from="AdMob" to="." method="_on_AdMob_rewarded_video_failed_to_load"]
[connection signal="rewarded_video_loaded" from="AdMob" to="." method="_on_AdMob_rewarded_video_loaded"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
